[gd_scene load_steps=6 format=3 uid="uid://dfatuuvqiis6s"]

[ext_resource type="Script" uid="uid://boxtctkgdy7sh" path="res://minigames/jap/jap.gd" id="1_tpi1c"]
[ext_resource type="Texture2D" uid="uid://c5kqijs3x8tbi" path="res://minigames/jap/bg.png" id="2_bb70n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gg4mj"]
bg_color = Color(0.372769, 0.585461, 0.717237, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dyycs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs0uv"]
size = Vector2(222, 8)

[node name="Jap" type="Node2D"]
script = ExtResource("1_tpi1c")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 305.0
offset_right = 655.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gg4mj")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_bb70n")

[node name="floor" type="StaticBody2D" parent="." groups=["floor"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(479, 540)
shape = SubResource("WorldBoundaryShape2D_dyycs")

[node name="reload" type="Button" parent="."]
offset_left = 123.0
offset_top = 244.0
offset_right = 181.0
offset_bottom = 275.0
text = "reload"

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2(474, -108)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2(1, -29)
shape = SubResource("RectangleShape2D_fs0uv")

[node name="Howto" type="AcceptDialog" parent="."]
title = "How to Play"
initial_position = 1
size = Vector2i(300, 120)
visible = true
unresizable = true
always_on_top = true
dialog_text = "Click on the white blocks to learn a character"
dialog_autowrap = true

[node name="Howto2" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "How to Play"
initial_position = 1
size = Vector2i(300, 120)
unresizable = true
always_on_top = true
dialog_text = "Nice! You've learned that „ÅÇ is equivalent to A"
dialog_autowrap = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="reload" to="." method="_on_reload_pressed"]
[connection signal="confirmed" from="Howto" to="." method="_on_howto_confirmed"]
[connection signal="confirmed" from="Howto2" to="." method="_on_phase1_confirmed"]
